cluster/gateway-api/gateway.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/refs/heads/main/gateway.networking.k8s.io/gateway_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: coinhub
  namespace: gateway
  annotations:
    networking.istio.io/service-type: LoadBalancer # ClusterIP
    cert-manager.io/cluster-issuer: coinhub-cluster-issuer
spec:
  gatewayClassName: istio
  listeners:
    - name: server-http
      port: 80
      protocol: HTTP
      hostname: "server.coinhub.kevinnitro.duckdns.org"
      allowedRoutes:
        namespaces:
          from: All
    - name: server-https
      port: 443
      protocol: HTTPS
      hostname: "server.coinhub.kevinnitro.duckdns.org"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: coinhub-kevinnitro-duckdns-tls
    - name: web-http
      port: 80
      protocol: HTTP
      hostname: "web.coinhub.kevinnitro.duckdns.org"
      allowedRoutes:
        namespaces:
          from: All
    - name: web-https
      port: 443
      protocol: HTTPS
      hostname: "web.coinhub.kevinnitro.duckdns.org"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: coinhub-kevinnitro-duckdns-tls
    - name: argo-cd-http
      port: 80
      protocol: HTTP
      hostname: "argocd.coinhub.kevinnitro.duckdns.org"
      allowedRoutes:
        namespaces:
          from: All
